# areyou

./: LICENSE  README.md  package-lock.json  package.json
src/: app.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/lib/components/: AreYou.svelte  ChangeTimer.svelte  ColorSelector.svelte  Timer.svelte  TimerOptsSettings.svelte
src/lib/scripts/: persistent-store.ts  runtime-store.ts  timer.ts  utils.ts
src/lib/styles/: app.css
src/routes/: +layout.svelte  +page.svelte
src/routes/settings/: +page.svelte
